correccion de fallos porque no se previo que alguien no tendria medallas